# QuantSpec

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/sample_outputs/: README.md
docs/sample_outputs/HYP-001-intraday-fail-demo/: brief.yaml  decision.md  gates.json  report.md  results.json  spec.md
docs/sample_outputs/HYP-002-intraday-pass-demo/: brief.yaml  decision.md  gates.json  report.md  results.json  spec.md
examples/: HYP-001-intraday-fail-demo.yaml  HYP-002-intraday-pass-demo.yaml
quant_spec/: README.md  __init__.py  cli.py  settings.py
quant_spec/ai/: client.py  report_generator.py  spec_generator.py
quant_spec/ai/fixtures/HYP-001-intraday-fail-demo/: report_response.json  spec_response.json
quant_spec/ai/fixtures/HYP-002-intraday-pass-demo/: report_response.json  spec_response.json
quant_spec/ai/prompts/: report_generator.system.md  spec_generator.system.md
quant_spec/data/: __init__.py
quant_spec/io/: __init__.py  storage.py
quant_spec/models/: __init__.py  brief.py  decision.py  gates.py  results.py
quant_spec/pipeline/: __init__.py  runner.py
quant_spec/schemas/: decision.schema.json  gates.schema.json  hypothesis_brief.schema.json  results.schema.json
quant_spec/validation/: __init__.py  backtesting.py  gates.py  metrics.py
tests/: test_smoke.py
tests/integration/: test_cli.py  test_live_claude.py  test_runner.py
tests/unit/: helpers.py  test_ai_fixture.py  test_backtesting.py  test_fixtures.py  test_gates.py  test_metrics.py  test_models.py  test_storage.py
(+2 files in other folders)
