[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-spec"
version = "0.1.0"
description = "AI-assisted, spec-driven validation pipeline for reproducible trading hypotheses."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alejandro Vasquez" },
]
dependencies = [
  "anthropic>=0.40.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
]

[project.scripts]
quantspec = "quant_spec.cli:app"

[dependency-groups]
dev = [
  "detect-secrets>=1.5.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["quant_spec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["quant_spec"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
